<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.view.fragments.CurrenciesDetailsFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        app:cardCornerRadius="15dp"
        app:cardElevation="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:text="@string/text_information"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/text_network"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/text_protocol"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView3" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/text_default"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView12" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/text_payin_enabled"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView13" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/text_payout_enabled"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView14" />

            <TextView
                android:id="@+id/textView17"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/text_precision_payout"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView15" />

            <TextView
                android:id="@+id/textView18"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/text_payout_fee"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView17" />

            <TextView
                android:id="@+id/textView19"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/text_payout_is_payment_id"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView18" />

            <TextView
                android:id="@+id/textView24"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/text_payout_payment_id"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView19" />

            <TextView
                android:id="@+id/textView20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/text_payin_confirmations"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView24" />

            <TextView
                android:id="@+id/textView21"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/text_low_proccesing_time"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView20" />

            <TextView
                android:id="@+id/textView22"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/text_high_processing_time"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView21" />

            <TextView
                android:id="@+id/textView23"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/text_avg_processing_time"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView22" />

            <TextView
                android:id="@+id/textNetwork"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/textView3"
                app:layout_constraintStart_toEndOf="@+id/textView3"
                app:layout_constraintTop_toTopOf="@+id/textView3"
                tools:text="TextView" />

            <TextView
                android:id="@+id/textProtocol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/textView12"
                app:layout_constraintStart_toEndOf="@+id/textView3"
                app:layout_constraintTop_toTopOf="@+id/textView12"
                tools:text="TextView" />

            <TextView
                android:id="@+id/textDefault"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/textView13"
                app:layout_constraintStart_toEndOf="@+id/textView13"
                app:layout_constraintTop_toTopOf="@+id/textView13"
                tools:text="TextView" />

            <TextView
                android:id="@+id/textPayinEnabled"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/textView14"
                app:layout_constraintStart_toEndOf="@+id/textView14"
                app:layout_constraintTop_toTopOf="@+id/textView14"
                tools:text="TextView" />

            <TextView
                android:id="@+id/textPayoutEnabled"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/textView15"
                app:layout_constraintStart_toEndOf="@+id/textView15"
                app:layout_constraintTop_toTopOf="@+id/textView15"
                tools:text="TextView" />

            <TextView
                android:id="@+id/textPrecisionPayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/textView17"
                app:layout_constraintStart_toEndOf="@+id/textView17"
                app:layout_constraintTop_toTopOf="@+id/textView17"
                tools:text="TextView" />

            <TextView
                android:id="@+id/textPayoutFee"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/textView18"
                app:layout_constraintStart_toEndOf="@+id/textView18"
                app:layout_constraintTop_toTopOf="@+id/textView18"
                tools:text="TextView" />

            <TextView
                android:id="@+id/textPayoutIsPaymentID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/textView19"
                app:layout_constraintStart_toEndOf="@+id/textView19"
                app:layout_constraintTop_toTopOf="@+id/textView19"
                tools:text="TextView" />

            <TextView
                android:id="@+id/textPayinPaymentID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/textView24"
                app:layout_constraintStart_toEndOf="@+id/textView24"
                app:layout_constraintTop_toTopOf="@+id/textView24"
                tools:text="TextView" />

            <TextView
                android:id="@+id/textPayinConfirmations"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/textView20"
                app:layout_constraintStart_toEndOf="@+id/textView20"
                app:layout_constraintTop_toTopOf="@+id/textView20"
                tools:text="TextView" />

            <TextView
                android:id="@+id/textLowProcessingTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/textView21"
                app:layout_constraintStart_toEndOf="@+id/textView21"
                app:layout_constraintTop_toTopOf="@+id/textView21"
                tools:text="TextView" />

            <TextView
                android:id="@+id/textHighProcessingTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/textView22"
                app:layout_constraintStart_toEndOf="@+id/textView21"
                app:layout_constraintTop_toTopOf="@+id/textView22"
                tools:text="TextView" />

            <TextView
                android:id="@+id/avgProcessingTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/textView23"
                app:layout_constraintStart_toEndOf="@+id/textView23"
                app:layout_constraintTop_toTopOf="@+id/textView23"
                tools:text="TextView" />

            <Button
                android:id="@+id/requestOperations"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView23"
                android:text="convertir divisa" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>